--- a/index.html
+++ b/index.html
@@ -11,58 +11,67 @@
 </head>
 <body>
   <div class="card">
-    Simple Omelette Recipe
+    <h1>Simple Omelette Recipe</h1>
 
-    An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+    to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    <div id="prep" class="card">
+      <h3>Preparation time</h3>
+      <ul>
+        <li>Total: Approximately 10 minutes</li>
+        <li>Preparation: 5 minutes</li>
+        <li>Cooking: 5 minutes</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Instructions</h2>
+      <ol>
+        <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+        You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-    Preparation time
+        <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
 
-    Total: Approximately 10 minutes
-    Preparation: 5 minutes
-    Cooking: 5 minutes
+        <li>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+        the eggs evenly coat the surface.</li>
 
-    Ingredients
+        <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+        middle, sprinkle your chosen fillings over one half of the omelette.</li>
 
-    2-3 large eggs
-    Salt, to taste
-    Pepper, to taste
-    1 tablespoon of butter or oil
-    Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+        fillings. Let it cook for another minute, then slide it onto a plate.</li>
 
-    Instructions
+        <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </div>
 
-    Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-    You can add a tablespoon of water or milk for a fluffier texture.
+    <div>
+      <h2>Nutrition</h2>
 
-    Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+      <p>The table below shows nutritional values per serving without the additional fillings.</p>
+      <table>
+        <tr>Calories</tr>
+        <tr>277kcal</tr>
 
-    Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-    the eggs evenly coat the surface.
+        <tr>Carbs</tr>
+        <tr>0g</tr>
 
-    Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-    middle, sprinkle your chosen fillings over one half of the omelette.
+        <tr>Protein</tr>
+        <tr>20g</tr>
 
-    Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-    fillings. Let it cook for another minute, then slide it onto a plate.
-
-    Enjoy: Serve hot, with additional salt and pepper if needed.
-
-    Nutrition
-
-    The table below shows nutritional values per serving without the additional fillings.
-
-    Calories
-    277kcal
-
-    Carbs
-    0g
-
-    Protein
-    20g
-
-    Fat
-    22g
+        <tr>Fat</tr>
+        <tr>22g</tr>
+      </table>
+    </div>
   </div>
 </body>
 </html>
