--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>Cooking: 5 minutes</li>
       </ul>
     </div>
-    <div>
+    <div id="ingred">
       <h2>Ingredients</h2>
       <ul>
         <li>2-3 large eggs</li>
@@ -33,7 +33,7 @@
         <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
       </ul>
     </div>
-    <div>
+    <div id="instruc">
       <h2>Instructions</h2>
       <ol>
         <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
@@ -54,22 +54,27 @@
       </ol>
     </div>
 
-    <div>
+    <div id="nutri">
       <h2>Nutrition</h2>
 
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
-        <tr>Calories</tr>
-        <tr>277kcal</tr>
-
-        <tr>Carbs</tr>
-        <tr>0g</tr>
-
-        <tr>Protein</tr>
-        <tr>20g</tr>
-
-        <tr>Fat</tr>
-        <tr>22g</tr>
+        <tr>
+          <td>Calories</td>
+          <td>277kcal</td>
+        </tr>
+        <tr>
+          <td>Carbs</td>
+          <td>0g</td>
+        </tr>
+        <tr>
+          <td>Protein</td>
+          <td>20g</td>
+        </tr>
+        <tr>
+          <td>Fat</td>
+          <td>22g</td>
+        </tr>
       </table>
     </div>
   </div>
