--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="card">
+    <img src="assets/images/image-omelette.jpeg" alt="Image of Omelette">
     <h1>Simple Omelette Recipe</h1>
 
     <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
