--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
     to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-    <div id="prep" class="card">
+    <div id="prep">
       <h3>Preparation time</h3>
-      <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+      <ul id="info">
+        <li><strong>Total</strong>: Approximately 10 minutes</li>
+        <li><strong>Preparation</strong>: 5 minutes</li>
+        <li><strong>Cooking</strong>: 5 minutes</li>
       </ul>
     </div>
     <div id="ingred">
