--- a/index.html
+++ b/index.html
@@ -65,24 +65,25 @@
       <h2>Nutrition</h2>
 
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table>
-        <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
-        </tr>
-        <tr>
-          <td>Carbs</td>
-          <td>0g</td>
-        </tr>
-        <tr>
-          <td>Protein</td>
-          <td>20g</td>
-        </tr>
-        <tr>
-          <td>Fat</td>
-          <td>22g</td>
-        </tr>
-      </table>
+      <div class="nutrition">
+          <p>Calories</p>
+          <p>277kcal</p>
+      </div>
+      <hr>
+      <div class="nutrition">
+          <p>Carbs</p>
+          <p>0g</p>
+      </div>
+      <hr>
+      <div class="nutrition">
+          <p>Protein</p>
+          <p>20g</p>
+      </div>
+      <hr>
+      <div class="nutrition">
+          <p>Fat</p>
+          <p>22g</p>
+      </div>
     </div>
   </div>
 </body>
