--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <div class="nutrition">
           <p>Calories</p>
-          <p>277kcal</p>
+          <p id="num">277kcal</p>
       </div>
       <hr>
       <div class="nutrition">
           <p>Carbs</p>
-          <p>0g</p>
+          <p id="num">0g</p>
       </div>
       <hr>
       <div class="nutrition">
           <p>Protein</p>
-          <p>20g</p>
+          <p id="num">20g</p>
       </div>
       <hr>
       <div class="nutrition">
           <p>Fat</p>
-          <p>22g</p>
+          <p id="num">22g</p>
       </div>
     </div>
   </div>
